[package]
name = "mappmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bmp = "0.5.0"
clap = { version = "4.1.8", features = ["derive"] }
csv = "1.2.0"
once_cell = "1.17.1"
regex = { version = "1.7.1", features = ["use_std"] }
